--- a/block-BJaaiq/code/index.html
+++ b/block-BJaaiq/code/index.html
@@ -8,21 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="quotes-container">
-        <div class="quote">
-          "Quote 1"
-          <div class="author">- Author 1</div>
-        </div>
-        <div class="quote">
-          "Quote 2"
-          <div class="author">- Author 2</div>
-        </div>
-        <div class="quote">
-          "Quote 3"
-          <div class="author">- Author 3</div>
-        </div>
-      </div>
+    <ul>
+        <!-- <li>
+            <blockquote>
+                'Genius is one percent inspiration and ninety-nine percent perspiration.'
+            </blockquote>
+           <cite>Thomas Edison</cite>
+        </li> -->
+    </ul>
+    <script src="quotes.js"></script> 
       <script src="index.js"></script>
+      
 
 </body>
 </html>
