--- a/block-BJaair/code/index.html
+++ b/block-BJaair/code/index.html
@@ -8,18 +8,36 @@
     <title>Notice Board</title>
 </head>
 
-<body>
-  <div id="notice-board">
-    <div id="notice-form">
-      <input type="text" placeholder="Notice Title" id="title" />
-      <select id="category">
-        <option value="General">General</option>
-        <option value="Important">Important</option>
-        <option value="Urgent">Urgent</option>
-      </select>
-      <button id="submit">Add Notice</button>
+<body >
+  <div class="container">
+    <header>User Cards</header>
+    <ul class="container">
+     <!-- <li>
+       <p>Daily Needs</p>
+       <h2>Get banana from the next shop</h2>
+     </li>
+     <li>
+       <p>Daily Needs</p>
+       <h2>Get banana from the next shop</h2>
+     </li>
+     <li>
+       <p>Daily Needs</p>
+       <h2>Get banana from the next shop</h2>
+     </li>
+     <li>
+       <p>Daily Needs</p>
+       <h2>Get banana from the next shop</h2>
+     </li> -->
+    </ul>
+    <div class="add__card ">
+     <form >
+       <input name="title" type="text" placeholder="Enter the title">
+       <input name="category" type="text" placeholder="Enter the category">
+       <button type="submit">Add New Item</button>
+     </form>
     </div>
   </div>
+
      <script src="index.js"></script> 
 </body>
 </html>
