--- a/block-BJaait/code/index.html
+++ b/block-BJaait/code/index.html
@@ -15,24 +15,27 @@
     <div class="drag__list container">
         <div class="input">
             <input name="item" type="text" placeholder="Add items in your list" >
-            <button>+</button>
+            <button class="add">+</button>
         </div>
        
         <ul>
-            <li>
+            <li class="draggable" draggable="true">
                 javascript
             </li>
-            <li>
+            <li lass="draggable" draggable="true">
                 react
             </li>
-            <li>
+            <li lass="draggable" draggable="true">
                 html5
             </li>
-            <li>
+            <li class="draggable" draggable="true">
+                SCSS
+            </li>
+            <li lass="draggable" draggable="true">
                 follow me
             </li>
         </ul>
     </div>
-    
+    <script src="index.js"></script>
 </body>
 </html>
